# Libfprint

./: .gitignore  CMakeLists.txt  Order.txt  README.md  SampleCommunication.txt  scan.pcap
Algorithm/: Algorithm.cpp  Algorithm.h  Algorithm.hpp  CMakeLists.txt  Testing.cpp  Testing.h
General/ImageFiles/: image_0.pgm  image_1.pgm  image_2.pgm
General/Keck/compileProject/: main.c
General/Keck/compileProject/_build/: cmake_install.cmake
ImageCapture/: Main.py
JImageCapture/: image_0.pgm  image_1.pgm
JImageCapture/src/de/teemze/: Main.java
compileProject/: CMakeLists.txt
compileProject/_build/: CMakeCache.txt  compileProject
libfprint/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  libfprint.cbp
libfprint/drivers/: elan.c  elan.h
libfprint/examples/: Testing.cpp  Testing.h
libfprint/libfprint/: core.c  img.c
libfprint/libfprint/drivers/: elan.c  elan.h
src/com/company/: Main.java
