set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required

# cmake_minimum_required(VERSION <specify CMake version here>)
project(libfprint)

set(CMAKE_CXX_STANDARD 11)

add_executable(libfprint
        .idea/libfprint.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        doc/doxygen.cfg
        doc/Makefile.am
        examples/cpp-test.cpp
        examples/enroll.c
        examples/img_capture.c
        examples/img_capture_continuous.c
        examples/Makefile.am
        examples/verify.c
        examples/verify_live.c
        libfprint/drivers/aes1610.c
        libfprint/drivers/aes1660.c
        libfprint/drivers/aes1660.h
        libfprint/drivers/aes2501.c
        libfprint/drivers/aes2501.h
        libfprint/drivers/aes2550.c
        libfprint/drivers/aes2550.h
        libfprint/drivers/aes2660.c
        libfprint/drivers/aes2660.h
        libfprint/drivers/aes3500.c
        libfprint/drivers/aes3k.c
        libfprint/drivers/aes3k.h
        libfprint/drivers/aes4000.c
        libfprint/drivers/aesx660.c
        libfprint/drivers/aesx660.h
        libfprint/drivers/driver_ids.h
        libfprint/drivers/elan.c
        libfprint/drivers/elan.h
        libfprint/drivers/etes603.c
        libfprint/drivers/fdu2000.c
        libfprint/drivers/upeke2.c
        libfprint/drivers/upeksonly.c
        libfprint/drivers/upeksonly.h
        libfprint/drivers/upektc.c
        libfprint/drivers/upektc.h
        libfprint/drivers/upektc_img.c
        libfprint/drivers/upektc_img.h
        libfprint/drivers/upekts.c
        libfprint/drivers/uru4000.c
        libfprint/drivers/vcom5s.c
        libfprint/drivers/vfs0050.c
        libfprint/drivers/vfs0050.h
        libfprint/drivers/vfs101.c
        libfprint/drivers/vfs301.c
        libfprint/drivers/vfs301_proto.c
        libfprint/drivers/vfs301_proto.h
        libfprint/drivers/vfs301_proto_fragments.h
        libfprint/drivers/vfs5011.c
        libfprint/drivers/vfs5011_proto.h
        libfprint/nbis/bozorth3/bozorth3.c
        libfprint/nbis/bozorth3/bz_alloc.c
        libfprint/nbis/bozorth3/bz_drvrs.c
        libfprint/nbis/bozorth3/bz_gbls.c
        libfprint/nbis/bozorth3/bz_io.c
        libfprint/nbis/bozorth3/bz_sort.c
        libfprint/nbis/include/bozorth.h
        libfprint/nbis/include/bz_array.h
        libfprint/nbis/include/defs.h
        libfprint/nbis/include/lfs.h
        libfprint/nbis/include/log.h
        libfprint/nbis/include/morph.h
        libfprint/nbis/include/sunrast.h
        libfprint/nbis/mindtct/binar.c
        libfprint/nbis/mindtct/block.c
        libfprint/nbis/mindtct/contour.c
        libfprint/nbis/mindtct/detect.c
        libfprint/nbis/mindtct/dft.c
        libfprint/nbis/mindtct/free.c
        libfprint/nbis/mindtct/globals.c
        libfprint/nbis/mindtct/imgutil.c
        libfprint/nbis/mindtct/init.c
        libfprint/nbis/mindtct/line.c
        libfprint/nbis/mindtct/log.c
        libfprint/nbis/mindtct/loop.c
        libfprint/nbis/mindtct/maps.c
        libfprint/nbis/mindtct/matchpat.c
        libfprint/nbis/mindtct/minutia.c
        libfprint/nbis/mindtct/morph.c
        libfprint/nbis/mindtct/quality.c
        libfprint/nbis/mindtct/remove.c
        libfprint/nbis/mindtct/ridges.c
        libfprint/nbis/mindtct/shape.c
        libfprint/nbis/mindtct/sort.c
        libfprint/nbis/mindtct/util.c
        libfprint/aeslib.c
        libfprint/aeslib.h
        libfprint/assembling.c
        libfprint/assembling.h
        libfprint/async.c
        libfprint/core.c
        libfprint/data.c
        libfprint/drv.c
        libfprint/fp_internal.h
        libfprint/fprint-list-udev-rules.c
        libfprint/fprint.h
        libfprint/img.c
        libfprint/imgdev.c
        libfprint/Makefile.am
        libfprint/pixman.c
        libfprint/poll.c
        libfprint/sync.c
        AUTHORS
        autogen.sh
        configure.ac
        COPYING
        HACKING
        INSTALL
        libfprint.pc.in
        Makefile.am
        NEWS
        README
        THANKS
        TODO)
